# docs/openapi.json
@@ -1348,6 +1348,13 @@
         "operationId": "getWebhooksStatus",
         "responses": {
           "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/WebhooksStatus"
+                }
+              }
+            },
             "description": "Webhooks status"
           }
         },
